Добавляет логотип и навигационное меню

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Сайт дизайн-студии из Краснодара</title>
+    <title>Сайт дизайн-студии Nerds</title>
   </head>
   <body>
-
+    <header class="header">
+      <img class="header__logo" src="img/logo/nerds-logo.svg" alt="Логотип дизайн-студии Nerds">
+      <nav class="menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a class="menu__link" href="#">Студия</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Клиенты</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Магазин</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Контакты</a>
+          </li>
+        </ul>
+        <ul class="basket">
+          <li class="basket__item">
+            <a class="basket__link" href="#">Корзина</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
