Добавляет промо секцию со слайдером

--- a/index.html
+++ b/index.html
@@ -31,5 +31,33 @@
         </ul>
       </nav>
     </header>
+    <main class="main">
+      <h1 class="visually-hidden">Сайт дизайн-студии Nerds</h1>
+      <section class="promo">
+        <h2 class="visually-hidden">Слайдер с описанием принципов работы дизайн-студии Nerds</h2>
+        <ul class="promo__list">
+          <li class="promo__item">
+            <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
+            <p class="promo__description">Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
+            <a class="button button_promo-link" href="#">Узнать больше</a>
+          </li>
+          <li class="promo__item">
+            <p class="promo__slogan">Любим математику как никто другой</p>
+            <p class="promo__description">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+            <a class="button button_promo-link" href="#">Узнать больше</a>
+          </li>
+          <li class="promo__item">
+            <p class="promo__slogan">Только ночь, только хардкор</p>
+            <p class="promo__description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a class="button button_promo-link" href="#">Узнать больше</a>
+          </li>
+        </ul>
+        <ul class="slider-controls">
+          <li class="slider-controls__item"></li>
+          <li class="slider-controls__item"></li>
+          <li class="slider-controls__item"></li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
