--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
           <li class="slider-controls__item"></li>
         </ul>
       </section>
+      <section class="services">
+        <h2 class="visually-hidden">Услуги дизайн-студии</h2>
+        <ul class="services__list">
+          <li class="services__item">
+            <h3 class="services__title">Веб-сайты</h3>
+            <p class="services__description">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <a class="button button_sites" href="#">Заказать</a>
+          </li>
+          <li class="services__item">
+            <h3 class="services__title">Приложения</h3>
+            <p class="services__description">Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a class="button button_apps" href="#">Заказать</a>
+          </li>
+          <li class="services__item">
+            <h3 class="services__title">Презентации</h3>
+            <p class="services__description">Вы даже не подозреваете, насколько вы изумительны!</p>
+            <a class="button button_presentation" href="#">Заказать</a>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
