Добавляет секцию о компании

--- a/index.html
+++ b/index.html
@@ -78,6 +78,39 @@
           </li>
         </ul>
       </section>
+      <section class="about">
+        <div class="about__left">
+          <h2 class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара</h2>
+          <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+            превыше креатива. Работаем не покладая рук, как роботы.
+          </p>
+          <h3 class="about__description">Выполняем заказы на разработку:</h3>
+          <ul class="about__list">
+            <li class="about__item">
+              <h4 class="about__services">Веб-сайтов любой сложности</h4>
+            </li>
+            <li class="about__item">
+              <h4 class="about__services">Мобильных приложений для iOS и Android</h4>
+            </li>
+            <li class="about__item">
+              <h4 class="about__services">Слайдшоу и видео для корпоративных презентаций</h4>
+            </li>
+          </ul>
+        </div>
+        <div class="about__right table">
+          <p class="about__description">с 2004 года Любим точность во всем:</p>
+          <div class="row">
+            <div class="cell">146<sup>%</sup></div>
+            <div class="cell">100<sup>%</sup></div>
+            <div class="cell">50<sup>%</sup></div>
+          </div>
+          <div class="row">
+            <div class="cell">Уровень самоотдачи</div>
+            <div class="cell">Соблюдение сроков</div>
+            <div class="cell">Минимальная предоплата</div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
