--- a/index.html
+++ b/index.html
@@ -111,6 +111,31 @@
           </div>
         </div>
       </section>
+      <section class="partners">
+        <h2 class="visually-hidden">Партнёры дизайн-студии</h2>
+        <ul class="partners__list">
+          <li class="partners__item">
+            <a class="partners__link" href="#" aria-label="HTML Academy">
+              <img class="partners__img" src="img/logo/html-academy.png" width="199" height="68" alt="Логотип HTML Academy">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a class="partners__link" href="#" aria-label="Барбершоп Бородинский">
+              <img class="partners__img" src="img/logo/borodinski.png" width="209" height="90" alt="Логотип барбершопа Бородинский">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a class="partners__link" href="#" aria-label="Pink">
+              <img class="partners__img" src="img/logo/pink.png" width="185" height="52" alt="Логотип Pink">
+            </a>
+          </li>
+          <li class="partners__item">
+            <a class="partners__link" href="#" aria-label="Mishka">
+              <img class="partners__img" src="img/logo/mishka.png" width="173" height="84" alt="Логотип Mishka">
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
