Добавляет карту проезда

--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
           </li>
         </ul>
       </section>
+      <article class="map">
+        <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
+        <img class="map__img" src="img/index/map.jpg" width="1400" height="416" alt="Месторасположение дизайн-студии Nerds.">
+      </article>
     </main>
   </body>
 </html>
