--- a/index.html
+++ b/index.html
@@ -139,7 +139,36 @@
       <article class="map">
         <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
         <img class="map__img" src="img/index/map.jpg" width="1400" height="416" alt="Месторасположение дизайн-студии Nerds.">
+        <div class="map__contacts">
+          <h3 class="map__title">Nerds design studio</h3>
+          <p class="map__addres">
+            191186, Санкт-Петербург,
+            ул. Б. Конюшенная, д. 19/8
+            тел. +7 (812) 275-75-75
+          </p>
+        </div>
       </article>
+      <footer class="footer">
+        <ul class="footer__socials">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              <img class="footer__img" src="img/icon/vk.svg" alt="Вконтакте">
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              <img class="footer__img" src="img/icon/facebook.svg" alt="Фейсбук">
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#">
+              <img class="footer__img" src="img/icon/instagram.svg" alt="Инстаграм">
+            </a>
+          </li>
+        </ul>
+        <h2 class="footer__title">Давайте дружить, это выгодно!</h2>
+        <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
+      </footer>
     </main>
   </body>
 </html>
