--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <img class="header__logo" src="img/logo/nerds-logo.svg" alt="Логотип дизайн-студии Nerds">
+      <img class="header__logo" src="img/logo/nerds-logo.svg" width="160" height="65" alt="Логотип дизайн-студии Nerds">
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__item">
@@ -37,19 +37,28 @@
         <h2 class="visually-hidden">Слайдер с описанием принципов работы дизайн-студии Nerds</h2>
         <ul class="promo__list">
           <li class="promo__item">
-            <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
-            <p class="promo__description">Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
-            <a class="button button_promo-link" href="#">Узнать больше</a>
+            <div class="promo__item-description">
+              <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
+              <p class="promo__description">Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
+              <a class="button button_promo-link" href="#">Узнать больше</a>
+            </div>
+            <div class="promo__item-img"></div>
           </li>
           <li class="promo__item">
-            <p class="promo__slogan">Любим математику как никто другой</p>
-            <p class="promo__description">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-            <a class="button button_promo-link" href="#">Узнать больше</a>
+            <div class="promo__item-description">
+              <p class="promo__slogan">Любим математику как никто другой</p>
+              <p class="promo__description">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+              <a class="button button_promo-link" href="#">Узнать больше</a>
+            </div>
+            <div class="promo__item-img"></div>
           </li>
           <li class="promo__item">
-            <p class="promo__slogan">Только ночь, только хардкор</p>
-            <p class="promo__description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-            <a class="button button_promo-link" href="#">Узнать больше</a>
+            <div class="promo__item-description">
+              <p class="promo__slogan">Только ночь, только хардкор</p>
+              <p class="promo__description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+              <a class="button button_promo-link" href="#">Узнать больше</a>
+            </div>
+            <div class="promo__item-img"></div>
           </li>
         </ul>
         <ul class="slider-controls">
@@ -62,16 +71,19 @@
         <h2 class="visually-hidden">Услуги дизайн-студии</h2>
         <ul class="services__list">
           <li class="services__item">
+            <div class="services__img"></div>
             <h3 class="services__title">Веб-сайты</h3>
             <p class="services__description">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a class="button button_sites" href="#">Заказать</a>
           </li>
           <li class="services__item">
+            <div class="services__img"></div>
             <h3 class="services__title">Приложения</h3>
             <p class="services__description">Покорите топ-10 приложений в AppStore и Google Play</p>
             <a class="button button_apps" href="#">Заказать</a>
           </li>
           <li class="services__item">
+            <div class="services__img"></div>
             <h3 class="services__title">Презентации</h3>
             <p class="services__description">Вы даже не подозреваете, насколько вы изумительны!</p>
             <a class="button button_presentation" href="#">Заказать</a>
@@ -99,16 +111,18 @@
         </div>
         <div class="about__right table">
           <p class="about__description">с 2004 года Любим точность во всем:</p>
-          <div class="row">
-            <div class="cell">146<sup>%</sup></div>
-            <div class="cell">100<sup>%</sup></div>
-            <div class="cell">50<sup>%</sup></div>
-          </div>
-          <div class="row">
-            <div class="cell">Уровень самоотдачи</div>
-            <div class="cell">Соблюдение сроков</div>
-            <div class="cell">Минимальная предоплата</div>
-          </div>
+          <table class="table">
+            <tr class="table__row">
+              <td class="table__cell">146<sup>%</sup></td>
+              <td class="table__cell">100<sup>%</sup></td>
+              <td class="table__cell">50<sup>%</sup></td>
+            </tr>
+            <tr class="table__row">
+              <td class="table__cell">Уровень самоотдачи</td>
+              <td class="table__cell">Соблюдение сроков</td>
+              <td class="table__cell">Минимальная предоплата</td>
+            </tr>
+          </table>
         </div>
       </section>
       <section class="partners">
@@ -139,6 +153,7 @@
       <article class="map">
         <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
         <img class="map__img" src="img/index/map.jpg" width="1400" height="416" alt="Месторасположение дизайн-студии Nerds.">
+        <div class="map__interactive" id="map"></div>
         <div class="map__contacts">
           <h3 class="map__title">Nerds design studio</h3>
           <p class="map__addres">
@@ -152,17 +167,17 @@
         <ul class="footer__socials">
           <li class="footer__item">
             <a class="footer__link" href="#">
-              <img class="footer__img" src="img/icon/vk.svg" alt="Вконтакте">
+              <img class="footer__img" src="img/icon/vk.svg" width="26" height="15" alt="Вконтакте">
             </a>
           </li>
           <li class="footer__item">
             <a class="footer__link" href="#">
-              <img class="footer__img" src="img/icon/facebook.svg" alt="Фейсбук">
+              <img class="footer__img" src="img/icon/facebook.svg" width="12" height="22" alt="Фейсбук">
             </a>
           </li>
           <li class="footer__item">
             <a class="footer__link" href="#">
-              <img class="footer__img" src="img/icon/instagram.svg" alt="Инстаграм">
+              <img class="footer__img" src="img/icon/instagram.svg" width="21" height="21" alt="Инстаграм">
             </a>
           </li>
         </ul>
