Добавляет фильтр выбора особенностей шаблона сайта

--- a/catalog.html
+++ b/catalog.html
@@ -83,7 +83,40 @@
           </fieldset>
           <fieldset class="filter__fieldset">
             <legend class="filter__legend">Особенности:</legend>
+            <ul class="filter__list">
+              <li class="filter__item">
+                <label class="filter__label">
+                  <input class="visually-hidden" type="checkbox" name="slider">
+                  Слайдер
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="filter__label">
+                  <input class="visually-hidden" type="checkbox" name="advantage-block">
+                  Блок преимуществ
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="filter__label">
+                  <input class="visually-hidden" type="checkbox" name="news">
+                  Новости
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="filter__label">
+                  <input class="visually-hidden" type="checkbox" name="gallery">
+                  Галерея
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="filter__label">
+                  <input class="visually-hidden" type="checkbox" name="basket">
+                  Корзина
+                </label>
+              </li>
+            </ul>
           </fieldset>
+          <button class="button" type="submit">Показать</button>
         </form>
       </section>
     </main>
