Добавляет секцию сортировки шаблонов сайтов

--- a/catalog.html
+++ b/catalog.html
@@ -119,6 +119,33 @@
           <button class="button" type="submit">Показать</button>
         </form>
       </section>
+      <section class="sorting">
+        <h2 class="visually-hidden">Секция сортировки шаблонов сайтов</h2>
+        <p class="sorting__text">Сортировать:</p>
+        <ul class="sorting__list">
+          <li class="sorting__item">
+            <a class="sorting__link sorting__link_active" href="#">По цене</a>
+          </li>
+          <li class="sorting__item">
+            <a class="sorting__link" href="#">По типу</a>
+          </li>
+          <li class="sorting__item">
+            <a class="sorting__link" href="#">По названию</a>
+          </li>
+        </ul>
+        <div class="sorting__wrap">
+          <a class="triangle" href="#" aria-label="Сортировка по убыванию">
+            <svg class="triangle-icon" width="11" height="10">
+              <use xlink:href="img/sprite.svg#triangle-down"></use>
+            </svg>
+          </a>
+          <a class="triangle triangle_active" href="#" aria-label="Сортировка по возрастанию">
+            <svg class="triangle-icon" width="11" height="10">
+              <use xlink:href="img/sprite.svg#triangle-up"></use>
+            </svg>
+          </a>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <ul class="footer__socials">
