Добавляет разметку шаблона сайта

--- a/catalog.html
+++ b/catalog.html
@@ -146,6 +146,23 @@
           </a>
         </div>
       </section>
+      <section class="templates">
+        <h2 class="visually-hidden">Каталог шаблонов сайтов</h2>
+        <article class="templates__item">
+          <h3 class="visually-hidden">Сайт поиска жилья в городке Седона</h3>
+          <svg class="browser-icon" width="360" height="40">
+            <use xlink:href="img/sprite.svg#browser"></use>
+          </svg>
+          <img class="templates__img" src="img/catalog/sedona.jpg" width="360" height="576" alt="Шаблон сайта поиска жилья">
+          <div class="templates__wrap">
+            <a class="templates__title-link" href="#" aria-label="Ссылка на страницу с информацией о шаблоне">
+              <h4 class="templates__title">Sedona</h4>
+            </a>
+            <p class="templates__description">Информационный сайт для туристов</p>
+            <a class="templates__link" href="#">9 900 руб.</a>
+          </div>
+        </article>
+      </section>
     </main>
     <footer class="footer">
       <ul class="footer__socials">
