--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
         </ul>
       </section>
       <section class="about">
+        <h2 class="visually-hidden">Информация о дизайн-студии</h2>
         <div class="about__left">
-          <h2 class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара</h2>
+          <p class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара</p>
           <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук,
             как роботы.
           </p>
