Добавляет секцию каталога шаблонов сайтов

--- a/catalog.html
+++ b/catalog.html
@@ -162,6 +162,76 @@
             <a class="templates__link" href="#">9 900 руб.</a>
           </div>
         </article>
+        <article class="templates__item">
+          <h3 class="visually-hidden">Сайт мобильного приложения Пинк</h3>
+          <svg class="browser-icon" width="360" height="40">
+            <use xlink:href="img/sprite.svg#browser"></use>
+          </svg>
+          <img class="templates__img" src="img/catalog/pink.jpg" width="360" height="576" alt="Шаблон сайта мобильного приложения">
+          <div class="templates__wrap">
+            <a class="templates__title-link" href="#" aria-label="Ссылка на страницу с информацией о шаблоне">
+              <h4 class="templates__title">Pink App</h4>
+            </a>
+            <p class="templates__description">Продуктовый лендинг приложения для iOS и Android</p>
+            <a class="templates__link" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="templates__item">
+          <h3 class="visually-hidden">Сайт барбешопа Бородинский</h3>
+          <svg class="browser-icon" width="360" height="40">
+            <use xlink:href="img/sprite.svg#browser"></use>
+          </svg>
+          <img class="templates__img" src="img/catalog/borodinski.jpg" width="360" height="576" alt="Шаблон сайта барбершопа">
+          <div class="templates__wrap">
+            <a class="templates__title-link" href="#" aria-label="Ссылка на страницу с информацией о шаблоне">
+              <h4 class="templates__title">Barbershop</h4>
+            </a>
+            <p class="templates__description">Сайт салоны красоты. Для мужчин, да.</p>
+            <a class="templates__link" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="templates__item">
+          <h3 class="visually-hidden">Сайт интернет-магазина вязаных игрушек Мишка</h3>
+          <svg class="browser-icon" width="360" height="40">
+            <use xlink:href="img/sprite.svg#browser"></use>
+          </svg>
+          <img class="templates__img" src="img/catalog/mishka.jpg" width="360" height="576" alt="Шаблон сайта интернет-магазина">
+          <div class="templates__wrap">
+            <a class="templates__title-link" href="#" aria-label="Ссылка на страницу с информацией о шаблоне">
+              <h4 class="templates__title">Mishka</h4>
+            </a>
+            <p class="templates__description">Интернет-магазин вязаных игрушек</p>
+            <a class="templates__link" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="templates__item">
+          <h3 class="visually-hidden">Сайт обучающих курсов А Плюс</h3>
+          <svg class="browser-icon" width="360" height="40">
+            <use xlink:href="img/sprite.svg#browser"></use>
+          </svg>
+          <img class="templates__img" src="img/catalog/a-plus.jpg" width="360" height="576" alt="Шаблон сайта обучающих курсов">
+          <div class="templates__wrap">
+            <a class="templates__title-link" href="#" aria-label="Ссылка на страницу с информацией о шаблоне">
+              <h4 class="templates__title">A Plus</h4>
+            </a>
+            <p class="templates__description">Лендинг курсов повышения квалификации</p>
+            <a class="templates__link" href="#">9 900 руб.</a>
+          </div>
+        </article>
+        <article class="templates__item">
+          <h3 class="visually-hidden">Сайт производителя кваса Кваст</h3>
+          <svg class="browser-icon" width="360" height="40">
+            <use xlink:href="img/sprite.svg#browser"></use>
+          </svg>
+          <img class="templates__img" src="img/catalog/kvass.jpg" width="360" height="576" alt="Шаблон сайта производителя кваса">
+          <div class="templates__wrap">
+            <a class="templates__title-link" href="#" aria-label="Ссылка на страницу с информацией о шаблоне">
+              <h4 class="templates__title">Кваст</h4>
+            </a>
+            <p class="templates__description">Промо-сайт производителя крафтового кваса</p>
+            <a class="templates__link" href="#">9 900 руб.</a>
+          </div>
+        </article>
       </section>
     </main>
     <footer class="footer">
