--- a/catalog.html
+++ b/catalog.html
@@ -233,6 +233,22 @@
           </div>
         </article>
       </section>
+      <section class="pagination">
+        <ul class="pagination__list">
+          <li class="pagination__item pagination__item_active">
+            <a class="pagination__link" href="#">1</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">2</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">3</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">Следующая</a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <ul class="footer__socials">
