--- a/index.html
+++ b/index.html
@@ -206,5 +206,22 @@
       <h2 class="footer__title">Давайте дружить, это выгодно!</h2>
       <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
     </footer>
+    <section class="feedback">
+      <h2 class="feedback__title">Напишите нам</h2>
+      <form class="feedback__form" action="https://echo.htmlacademy.ru" method="POST">
+        <p class="feedback__row">
+          <label class="feedback__label">Ваше имя:
+            <input class="feedback__input" type="text" name="user-name" placeholder="Имя Фамилия">
+          </label>
+          <label class="feedback__label">Ваше e-mail:
+            <input class="feedback__input" type="email" name="user-name" placeholder="email@example.com">
+          </label>
+        </p>
+        <label class="feedback__label">Текст письма:
+          <textarea class="feedback__textarea" name="message" placeholder="В свободной форме"></textarea>
+        </label>
+        <button class="feedback__button" type="submit">Отправить</button>
+      </form>
+    </section>
   </body>
 </html>
