--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,7 @@
     <title>Сайт дизайн-студии Nerds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
@@ -236,6 +237,7 @@
         </article>
       </section>
       <section class="pagination">
+        <h2 class="visually-hidden">Переход по страницам сайта</h2>
         <ul class="pagination__list">
           <li class="pagination__item pagination__item_active">
             <a class="pagination__link" href="#">1</a>
@@ -276,7 +278,7 @@
           </a>
         </li>
       </ul>
-      <h2 class="footer__title">Давайте дружить, это выгодно!</h2>
+      <p class="footer__title">Давайте дружить, это выгодно!</p>
       <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
     </footer>
   </body>
