--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Сайт дизайн-студии Nerds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
@@ -205,11 +206,11 @@
           </a>
         </li>
       </ul>
-      <h2 class="footer__title">Давайте дружить, это выгодно!</h2>
+      <p class="footer__title">Давайте дружить, это выгодно!</p>
       <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
     </footer>
     <section class="feedback">
-      <h2 class="feedback__title">Напишите нам</h2>
+      <h2 class="footer__text">Напишите нам</h2>
       <form class="feedback__form" action="https://echo.htmlacademy.ru" method="POST">
         <p class="feedback__row">
           <label class="feedback__label">Ваше имя:
