Добавляет базовую стилизацию секции промо

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             <div class="promo__item-img"></div>
           </li>
         </ul>
-        <ul class="slider-controls">
-          <li class="slider-controls__item"></li>
-          <li class="slider-controls__item"></li>
-          <li class="slider-controls__item"></li>
-        </ul>
+        <div class="slider">
+          <button class="slider__controls slider__controls_active" type="button"></button>
+          <button class="slider__controls" type="button"></button>
+          <button class="slider__controls" type="button"></button>
+        </div>
       </section>
       <section class="services">
         <h2 class="visually-hidden">Услуги дизайн-студии</h2>
@@ -179,6 +179,7 @@
           <p class="map__addres">
             191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75
           </p>
+          <a class="button" href="#">Напишите нам</a>
         </div>
       </article>
     </main>
