Добавляет базовую стилизацию секции о компании

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
               </td>
             </tr>
             <tr class="table__row">
-              <td class="table__cell">Уровень самоотдачи</td>
-              <td class="table__cell">Соблюдение сроков</td>
-              <td class="table__cell">Минимальная предоплата</td>
+              <td class="table__cell table__cell_regular">Уровень самоотдачи</td>
+              <td class="table__cell table__cell_regular">Соблюдение сроков</td>
+              <td class="table__cell table__cell_regular">Минимальная предоплата</td>
             </tr>
           </table>
         </div>
