--- a/catalog.html
+++ b/catalog.html
@@ -255,6 +255,18 @@
       </section>
     </main>
     <footer class="footer">
+      <article class="map">
+        <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
+        <img class="map__img" src="img/index/map.jpg" width="1400" height="416" alt="Месторасположение дизайн-студии Nerds.">
+        <div class="map__interactive" id="map"></div>
+        <div class="map__contacts">
+          <h3 class="map__title">Nerds design studio</h3>
+          <p class="map__addres">
+            191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75
+          </p>
+          <a class="button" href="#">Напишите нам</a>
+        </div>
+      </article>
       <ul class="footer__socials">
         <li class="footer__item">
           <a class="footer__link" href="#" aria-label="Вконтакте">
@@ -281,5 +293,27 @@
       <p class="footer__title">Давайте дружить, это выгодно!</p>
       <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
     </footer>
+    <section class="feedback">
+      <h2 class="footer__text">Напишите нам</h2>
+      <form class="feedback__form" action="https://echo.htmlacademy.ru" method="POST">
+        <p class="feedback__row">
+          <label class="feedback__label">Ваше имя:
+            <input class="feedback__input" type="text" name="user-name" placeholder="Имя Фамилия">
+          </label>
+          <label class="feedback__label">Ваше e-mail:
+            <input class="feedback__input" type="email" name="user-name" placeholder="email@example.com">
+          </label>
+        </p>
+        <label class="feedback__label">Текст письма:
+          <textarea class="feedback__textarea" name="message" placeholder="В свободной форме"></textarea>
+        </label>
+        <button class="button feedback__button" type="submit">Отправить</button>
+      </form>
+      <button class="feedback__close" type="button">
+        <svg class="feedback__close-icon" width="21" height="21" aria-label="Кнопка закрытия модального окна">
+          <use xlink:href="img/sprite.svg#close-cross"></use>
+        </svg>
+      </button>
+    </section>
   </body>
 </html>
