--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,10 @@
       </nav>
     </header>
     <main class="main">
-      <h1 class="main__title">Магазин готовых шаблонов</h1>
+      <h1 class="visually-hidden">Сайт дизайн-студии Nerds</h1>
+      <section class="promo promo_size">
+        <h2 class="promo__title">Магазин готовых шаблонов</h2>
+      </section>
       <section class="filter">
         <h2 class="visually-hidden">Фильтр выбора шаблона сайта</h2>
         <form class="filter__form" action="https://echo.htmlacademy.ru" method="POST">
@@ -119,7 +122,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="button" type="submit">Показать</button>
+          <button class="button button_filter" type="submit">Показать</button>
         </form>
       </section>
       <section class="sorting">
@@ -138,7 +141,7 @@
         </ul>
         <div class="sorting__wrap">
           <a class="triangle" href="#" aria-label="Сортировка по убыванию">
-            <svg class="triangle-icon" width="11" height="10">
+            <svg class="triangle-icon triangle-icon_active" width="11" height="10">
               <use xlink:href="img/sprite.svg#triangle-down"></use>
             </svg>
           </a>
@@ -162,7 +165,7 @@
               <h4 class="templates__title">Sedona</h4>
             </a>
             <p class="templates__description">Информационный сайт для туристов</p>
-            <a class="templates__link" href="#">9 900 руб.</a>
+            <a class="button templates__link" href="#">9 900 руб.</a>
           </div>
         </article>
         <article class="templates__item">
@@ -176,7 +179,7 @@
               <h4 class="templates__title">Pink App</h4>
             </a>
             <p class="templates__description">Продуктовый лендинг приложения для iOS и Android</p>
-            <a class="templates__link" href="#">9 900 руб.</a>
+            <a class="button templates__link" href="#">9 900 руб.</a>
           </div>
         </article>
         <article class="templates__item">
@@ -190,7 +193,7 @@
               <h4 class="templates__title">Barbershop</h4>
             </a>
             <p class="templates__description">Сайт салоны красоты. Для мужчин, да.</p>
-            <a class="templates__link" href="#">9 900 руб.</a>
+            <a class="button templates__link" href="#">9 900 руб.</a>
           </div>
         </article>
         <article class="templates__item">
@@ -204,7 +207,7 @@
               <h4 class="templates__title">Mishka</h4>
             </a>
             <p class="templates__description">Интернет-магазин вязаных игрушек</p>
-            <a class="templates__link" href="#">9 900 руб.</a>
+            <a class="button templates__link" href="#">9 900 руб.</a>
           </div>
         </article>
         <article class="templates__item">
@@ -218,7 +221,7 @@
               <h4 class="templates__title">A Plus</h4>
             </a>
             <p class="templates__description">Лендинг курсов повышения квалификации</p>
-            <a class="templates__link" href="#">9 900 руб.</a>
+            <a class="button templates__link" href="#">9 900 руб.</a>
           </div>
         </article>
         <article class="templates__item">
@@ -232,15 +235,15 @@
               <h4 class="templates__title">Кваст</h4>
             </a>
             <p class="templates__description">Промо-сайт производителя крафтового кваса</p>
-            <a class="templates__link" href="#">9 900 руб.</a>
+            <a class="button templates__link" href="#">9 900 руб.</a>
           </div>
         </article>
       </section>
       <section class="pagination">
         <h2 class="visually-hidden">Переход по страницам сайта</h2>
         <ul class="pagination__list">
-          <li class="pagination__item pagination__item_active">
-            <a class="pagination__link" href="#">1</a>
+          <li class="pagination__item">
+            <a class="pagination__link pagination__link_active" href="#">1</a>
           </li>
           <li class="pagination__item">
             <a class="pagination__link" href="#">2</a>
