--- a/index.html
+++ b/index.html
@@ -11,30 +11,28 @@
   </head>
   <body>
     <header class="header">
-      <svg class="header__logo" width="160" height="65" aria-label="Логотип дизайн-студии Nerds">
-				<use xlink:href="img/sprite.svg#nerds-logo"></use>
-			</svg>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a class="menu__link" href="#">Студия</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Клиенты</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="catalog.html">Магазин</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Контакты</a>
-          </li>
-        </ul>
-        <ul class="basket">
-          <li class="basket__item">
-            <a class="basket__link" href="#">Корзина</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header__wrapper">
+        <svg class="header__logo" width="160" height="65" aria-label="Логотип дизайн-студии Nerds">
+          <use xlink:href="img/sprite.svg#nerds-logo"></use>
+        </svg>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#">Студия</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Клиенты</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="catalog.html">Магазин</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Контакты</a>
+            </li>
+          </ul>
+          <a class="basket-link" href="#">Корзина</a>
+        </nav>
+      </div>
     </header>
     <main class="main">
       <h1 class="visually-hidden">Сайт дизайн-студии Nerds</h1>
