Добавляет сетку секции промо и позиционирует слайды

--- a/index.html
+++ b/index.html
@@ -37,37 +37,39 @@
     <main class="main">
       <h1 class="visually-hidden">Сайт дизайн-студии Nerds</h1>
       <section class="promo">
-        <h2 class="visually-hidden">Слайдер с описанием принципов работы дизайн-студии Nerds</h2>
-        <ul class="promo__list">
-          <li class="promo__item">
-            <div class="promo__item-description">
-              <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
-              <p class="promo__description">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-              <a class="button button_promo-link" href="#">Узнать больше</a>
-            </div>
-            <div class="promo__item-img"></div>
-          </li>
-          <li class="promo__item">
-            <div class="promo__item-description">
-              <p class="promo__slogan">Любим математику как никто другой</p>
-              <p class="promo__description">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-              <a class="button button_promo-link" href="#">Узнать больше</a>
-            </div>
-            <div class="promo__item-img"></div>
-          </li>
-          <li class="promo__item">
-            <div class="promo__item-description">
-              <p class="promo__slogan">Только ночь, только хардкор</p>
-              <p class="promo__description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-              <a class="button button_promo-link" href="#">Узнать больше</a>
-            </div>
-            <div class="promo__item-img"></div>
-          </li>
-        </ul>
-        <div class="slider">
-          <button class="slider__controls slider__controls_active" type="button"></button>
-          <button class="slider__controls" type="button"></button>
-          <button class="slider__controls" type="button"></button>
+        <div class="promo__wrapper">
+          <h2 class="visually-hidden">Слайдер с описанием принципов работы дизайн-студии Nerds</h2>
+          <ul class="promo__list">
+            <li class="promo__item">
+              <div class="promo__item-description">
+                <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
+                <p class="promo__description">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+                <a class="button button_promo-link" href="#">Узнать больше</a>
+              </div>
+              <div class="promo__item-img"></div>
+            </li>
+            <li class="promo__item">
+              <div class="promo__item-description">
+                <p class="promo__slogan">Любим математику как никто другой</p>
+                <p class="promo__description">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+                <a class="button button_promo-link" href="#">Узнать больше</a>
+              </div>
+              <div class="promo__item-img"></div>
+            </li>
+            <li class="promo__item">
+              <div class="promo__item-description">
+                <p class="promo__slogan">Только ночь, только хардкор</p>
+                <p class="promo__description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                <a class="button button_promo-link" href="#">Узнать больше</a>
+              </div>
+              <div class="promo__item-img"></div>
+            </li>
+          </ul>
+          <div class="slider">
+            <button class="slider__controls slider__controls_active" type="button"></button>
+            <button class="slider__controls" type="button"></button>
+            <button class="slider__controls" type="button"></button>
+          </div>
         </div>
       </section>
       <section class="services">
