--- a/index.html
+++ b/index.html
@@ -40,36 +40,22 @@
         <div class="promo__wrapper">
           <h2 class="visually-hidden">Слайдер с описанием принципов работы дизайн-студии Nerds</h2>
           <ul class="promo__list">
-            <li class="promo__item">
-              <div class="promo__item-description">
-                <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
-                <p class="promo__description">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-                <a class="button button_promo-link" href="#">Узнать больше</a>
-              </div>
-              <div class="promo__item-img"></div>
+            <li class="promo__item promo__item_first-slide">
+              <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
+              <p class="promo__description">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+              <a class="button button_promo-link" href="#">Узнать больше</a>
             </li>
-            <li class="promo__item">
-              <div class="promo__item-description">
-                <p class="promo__slogan">Любим математику как никто другой</p>
-                <p class="promo__description">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-                <a class="button button_promo-link" href="#">Узнать больше</a>
-              </div>
-              <div class="promo__item-img"></div>
+            <li class="promo__item promo__item_second-slide">
+              <p class="promo__slogan">Любим математику как никто другой</p>
+              <p class="promo__description">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+              <a class="button button_promo-link" href="#">Узнать больше</a>
             </li>
-            <li class="promo__item">
-              <div class="promo__item-description">
-                <p class="promo__slogan">Только ночь, только хардкор</p>
-                <p class="promo__description">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-                <a class="button button_promo-link" href="#">Узнать больше</a>
-              </div>
-              <div class="promo__item-img"></div>
+            <li class="promo__item promo__item_third-slide">
+              <p class="promo__slogan">Только ночь, только хардкор</p>
+              <p class="promo__description">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+              <a class="button button_promo-link" href="#">Узнать больше</a>
             </li>
           </ul>
-          <div class="slider">
-            <button class="slider__controls slider__controls_active" type="button"></button>
-            <button class="slider__controls" type="button"></button>
-            <button class="slider__controls" type="button"></button>
-          </div>
         </div>
       </section>
       <section class="services">
