--- a/catalog.html
+++ b/catalog.html
@@ -11,29 +11,32 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__link" href="index.html">
-        <svg class="header__logo" width="160" height="65" aria-label="Логотип дизайн-студии Nerds">
-          <use xlink:href="img/sprite.svg#nerds-logo"></use>
-        </svg>
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a class="menu__link" href="#">Студия</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Клиенты</a>
-          </li>
-          <li class="menu__item menu__item_active">
-            <a class="menu__link" href="#">Магазин</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Контакты</a>
-          </li>
-        </ul>
-        <a class="basket__link" href="#">Корзина</a>
-      </nav>
+      <div class="header__wrapper">
+        <a class="header__link" href="index.html">
+          <svg class="header__logo" width="160" height="65" aria-label="Логотип дизайн-студии Nerds">
+            <use xlink:href="img/sprite.svg#nerds-logo"></use>
+          </svg>
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="menu__link" href="#">Студия</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Клиенты</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="catalog.html">Магазин</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Контакты</a>
+            </li>
+          </ul>
+          <a class="basket-link" href="#">Корзина</a>
+        </nav>
+      </div>
     </header>
+    <header class="header">
     <main class="main">
       <h1 class="visually-hidden">Сайт дизайн-студии Nerds</h1>
       <section class="promo promo_size">
