--- a/index.html
+++ b/index.html
@@ -58,104 +58,103 @@
           </ul>
         </div>
       </section>
-      <section class="services">
-        <h2 class="visually-hidden">Услуги дизайн-студии</h2>
-        <ul class="services__list">
-          <li class="services__item">
-            <div class="services__img"></div>
-            <h3 class="services__title">Веб-сайты</h3>
-            <p class="services__description">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a class="button button_sites" href="#">Заказать</a>
-          </li>
-          <li class="services__item">
-            <div class="services__img"></div>
-            <h3 class="services__title">Приложения</h3>
-            <p class="services__description">Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a class="button button_apps" href="#">Заказать</a>
-          </li>
-          <li class="services__item">
-            <div class="services__img"></div>
-            <h3 class="services__title">Презентации</h3>
-            <p class="services__description">Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a class="button button_presentation" href="#">Заказать</a>
-          </li>
-        </ul>
-      </section>
-      <section class="about">
-        <h2 class="visually-hidden">Информация о дизайн-студии</h2>
-        <div class="about__left">
-          <p class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара</p>
-          <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук,
-            как роботы.
-          </p>
-          <h3 class="about__description">Выполняем заказы на разработку:</h3>
-          <ul class="about__list">
-            <li class="about__item">
-              <h4 class="about__services">Веб-сайтов любой сложности</h4>
+      <div class="main__wrapper">
+        <section class="services">
+          <h2 class="visually-hidden">Услуги дизайн-студии</h2>
+          <ul class="services__list">
+            <li class="services__item services__item-sites">
+              <h3 class="services__title">Веб-сайты</h3>
+              <p class="services__description">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <a class="button button_sites" href="#">Заказать</a>
             </li>
-            <li class="about__item">
-              <h4 class="about__services">Мобильных приложений для iOS и Android</h4>
+            <li class="services__item services__item-apps">
+              <h3 class="services__title">Приложения</h3>
+              <p class="services__description">Покорите топ-10 приложений в AppStore и Google Play</p>
+              <a class="button button_apps" href="#">Заказать</a>
             </li>
-            <li class="about__item">
-              <h4 class="about__services">Слайдшоу и видео для корпоративных презентаций</h4>
+            <li class="services__item services__item-presentations">
+              <h3 class="services__title">Презентации</h3>
+              <p class="services__description">Вы даже не подозреваете, насколько вы изумительны!</p>
+              <a class="button button_presentation" href="#">Заказать</a>
             </li>
           </ul>
-        </div>
-        <div class="about__right table">
-          <p class="about__description">с 2004 года Любим точность во всем:</p>
-          <table class="table">
-            <tr class="table__row">
-              <td class="table__cell">146
-                <sup>%</sup>
-              </td>
-              <td class="table__cell">100
-                <sup>%</sup>
-              </td>
-              <td class="table__cell">50
-                <sup>%</sup>
-              </td>
-            </tr>
-            <tr class="table__row">
-              <td class="table__cell table__cell_regular">Уровень самоотдачи</td>
-              <td class="table__cell table__cell_regular">Соблюдение сроков</td>
-              <td class="table__cell table__cell_regular">Минимальная предоплата</td>
-            </tr>
-          </table>
-        </div>
-      </section>
-      <section class="partners">
-        <h2 class="visually-hidden">Партнёры дизайн-студии</h2>
-        <ul class="partners__list">
-          <li class="partners__item">
-            <a class="partners__link" href="#" aria-label="HTML Academy">
-              <svg class="partners__img" width="199" height="68" aria-label="Логотип HTML Academy">
-                <use xlink:href="img/sprite.svg#html-academy"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="partners__item">
-            <a class="partners__link" href="#" aria-label="Барбершоп Бородинский">
-              <svg class="partners__img" width="209" height="90" aria-label="Логотип барбершопа Бородинский">
-                <use xlink:href="img/sprite.svg#borodinski"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="partners__item">
-            <a class="partners__link" href="#" aria-label="Логотип Pink">
-              <svg class="partners__img" width="185" height="52" aria-label="Логотип Pink">
-                <use xlink:href="img/sprite.svg#pink"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="partners__item">
-            <a class="partners__link" href="#" aria-label="Логотип Mishka">
-              <svg class="partners__img" width="173" height="84" aria-label="Логотип Mishka">
-                <use xlink:href="img/sprite.svg#mishka"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </section>
+        </section>
+        <section class="about">
+          <h2 class="visually-hidden">Информация о дизайн-студии</h2>
+          <div class="about__left">
+            <p class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара</p>
+            <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук,
+              как роботы.
+            </p>
+            <h3 class="about__description">Выполняем заказы на разработку:</h3>
+            <ul class="about__list">
+              <li class="about__item">
+                <h4 class="about__services">Веб-сайтов любой сложности</h4>
+              </li>
+              <li class="about__item">
+                <h4 class="about__services">Мобильных приложений для iOS и Android</h4>
+              </li>
+              <li class="about__item">
+                <h4 class="about__services">Слайдшоу и видео для корпоративных презентаций</h4>
+              </li>
+            </ul>
+          </div>
+          <div class="about__right table">
+            <p class="about__description">с 2004 года Любим точность во всем:</p>
+            <table class="table">
+              <tr class="table__row">
+                <td class="table__cell">146
+                  <sup>%</sup>
+                </td>
+                <td class="table__cell">100
+                  <sup>%</sup>
+                </td>
+                <td class="table__cell">50
+                  <sup>%</sup>
+                </td>
+              </tr>
+              <tr class="table__row">
+                <td class="table__cell table__cell_regular">Уровень самоотдачи</td>
+                <td class="table__cell table__cell_regular">Соблюдение сроков</td>
+                <td class="table__cell table__cell_regular">Минимальная предоплата</td>
+              </tr>
+            </table>
+          </div>
+        </section>
+        <section class="partners">
+          <h2 class="visually-hidden">Партнёры дизайн-студии</h2>
+          <ul class="partners__list">
+            <li class="partners__item">
+              <a class="partners__link" href="#" aria-label="HTML Academy">
+                <svg class="partners__img" width="199" height="68" aria-label="Логотип HTML Academy">
+                  <use xlink:href="img/sprite.svg#html-academy"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="partners__item">
+              <a class="partners__link" href="#" aria-label="Барбершоп Бородинский">
+                <svg class="partners__img" width="209" height="90" aria-label="Логотип барбершопа Бородинский">
+                  <use xlink:href="img/sprite.svg#borodinski"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="partners__item">
+              <a class="partners__link" href="#" aria-label="Логотип Pink">
+                <svg class="partners__img" width="185" height="52" aria-label="Логотип Pink">
+                  <use xlink:href="img/sprite.svg#pink"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="partners__item">
+              <a class="partners__link" href="#" aria-label="Логотип Mishka">
+                <svg class="partners__img" width="173" height="84" aria-label="Логотип Mishka">
+                  <use xlink:href="img/sprite.svg#mishka"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="footer">
       <article class="map">
