Добавляет сетку секции о компании

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <section class="about">
           <h2 class="visually-hidden">Информация о дизайн-студии</h2>
           <div class="about__left">
-            <p class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара</p>
+            <p class="about__title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
             <p class="about__text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук,
               как роботы.
             </p>
@@ -99,19 +99,13 @@
               </li>
             </ul>
           </div>
-          <div class="about__right table">
-            <p class="about__description">с 2004 года Любим точность во всем:</p>
+          <div class="about__right">
+            <p class="about__description about__description_align">с 2004 года Любим точность во всем:</p>
             <table class="table">
               <tr class="table__row">
-                <td class="table__cell">146
-                  <sup>%</sup>
-                </td>
-                <td class="table__cell">100
-                  <sup>%</sup>
-                </td>
-                <td class="table__cell">50
-                  <sup>%</sup>
-                </td>
+                <th class="table__cell">146<sup class="table__percent">%</sup></th>
+                <th class="table__cell">100<sup class="table__percent">%</sup></th>
+                <th class="table__cell">50<sup class="table__percent">%</sup></th>
               </tr>
               <tr class="table__row">
                 <td class="table__cell table__cell_regular">Уровень самоотдачи</td>
