Добавляет сетку разделу с картой

--- a/index.html
+++ b/index.html
@@ -153,41 +153,45 @@
     <footer class="footer">
       <article class="map">
         <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
-        <img class="map__img" src="img/index/map.jpg" width="1440" height="416" alt="Месторасположение дизайн-студии Nerds.">
         <div class="map__interactive" id="map"></div>
-        <div class="map__contacts">
-          <h3 class="map__title">Nerds design studio</h3>
-          <p class="map__addres">
-            191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75
-          </p>
-          <a class="button" href="#">Напишите нам</a>
+        <img class="map__img" src="img/index/map.jpg" width="1440" height="416" alt="Месторасположение дизайн-студии Nerds.">
+        <div class="map__wrapper">
+          <div class="map__contacts">
+            <h3 class="map__title">Nerds design studio</h3>
+            <p class="map__addres">
+              191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8 <span class="map__phone">тел. +7 (812) 275-75-75</span>
+            </p>
+            <a class="button button__modal" href="#">Напишите нам</a>
+          </div>
         </div>
       </article>
-      <ul class="footer__socials">
-        <li class="footer__item">
-          <a class="footer__link" href="#" aria-label="Вконтакте">
-            <svg class="footer__img" width="26" height="15" aria-label="Логотип Вконтакте">
-              <use xlink:href="img/sprite.svg#vk"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link" href="#" aria-label="Фейсбук">
-            <svg class="footer__img" width="12" height="22" aria-label="Логотип Фейсбук">
-              <use xlink:href="img/sprite.svg#facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link" href="#" aria-label="Инстаграм">
-            <svg class="footer__img" width="21" height="21" aria-label="Логотип Инстаграм">
-              <use xlink:href="img/sprite.svg#instagram"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-      <p class="footer__title">Давайте дружить, это выгодно!</p>
-      <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
+      <div class="footer__wrapper">
+        <ul class="footer__socials">
+          <li class="footer__item">
+            <a class="footer__link" href="#" aria-label="Вконтакте">
+              <svg class="footer__img" width="26" height="15" aria-label="Логотип Вконтакте">
+                <use xlink:href="img/sprite.svg#vk"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#" aria-label="Фейсбук">
+              <svg class="footer__img" width="12" height="22" aria-label="Логотип Фейсбук">
+                <use xlink:href="img/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="#" aria-label="Инстаграм">
+              <svg class="footer__img" width="21" height="21" aria-label="Логотип Инстаграм">
+                <use xlink:href="img/sprite.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <p class="footer__title">Давайте дружить, это выгодно!</p>
+        <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
+      </div>
     </footer>
     <section class="feedback">
       <h2 class="footer__text">Напишите нам</h2>
