--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
           </div>
         </div>
       </article>
-      <div class="footer__wrapper">
-        <ul class="footer__socials">
+      <div class="footer__socials">
+        <ul class="footer__list">
           <li class="footer__item">
             <a class="footer__link" href="#" aria-label="Вконтакте">
               <svg class="footer__img" width="26" height="15" aria-label="Логотип Вконтакте">
@@ -189,8 +189,10 @@
             </a>
           </li>
         </ul>
-        <p class="footer__title">Давайте дружить, это выгодно!</p>
-        <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
+        <div class="footer__info">
+          <p class="footer__title">Давайте дружить, это выгодно!</p>
+          <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
+        </div>
       </div>
     </footer>
     <section class="feedback">
