--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
       </div>
     </footer>
     <section class="feedback">
-      <h2 class="footer__text">Напишите нам</h2>
+      <h2 class="feedback__text">Напишите нам</h2>
       <form class="feedback__form" action="https://echo.htmlacademy.ru" method="POST">
         <p class="feedback__row">
           <label class="feedback__label">Ваше имя:
             <input class="feedback__input" type="text" name="user-name" placeholder="Имя Фамилия">
           </label>
           <label class="feedback__label">Ваше e-mail:
-            <input class="feedback__input" type="email" name="user-name" placeholder="email@example.com">
+            <input class="feedback__input" type="email" name="user-email" placeholder="email@example.com">
           </label>
         </p>
         <label class="feedback__label">Текст письма:
