Стилизует секцию промо внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
     </header>
     <main class="main">
       <h1 class="visually-hidden">Сайт дизайн-студии Nerds</h1>
-      <section class="promo promo_size">
+      <section class="promo promo-inner">
         <h2 class="promo__title">Магазин готовых шаблонов</h2>
       </section>
       <section class="filter">
