Стилизует выводы минимальной и максимальной цены

--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
       <section class="promo promo-inner">
         <h2 class="promo__title">Магазин готовых шаблонов</h2>
       </section>
-      <div class="main__wrapper">
+      <div class="main__wrapper-catalog">
         <section class="filter">
           <h2 class="visually-hidden">Фильтр выбора шаблона сайта</h2>
           <form class="filter__form" action="https://echo.htmlacademy.ru" method="POST">
